[package]
name = "yast"
edition = "2024"

[workspace]
members = [
  "crates/yast-core", "crates/yast-layout-editor"
]

[dependencies]
yast-core = { workspace = true }
anyhow = { workspace = true }
iced = { workspace = true }
iced_aw = { workspace = true }
livesplit-core = { workspace = true }
log = { workspace = true }
mlua = { workspace = true }
pretty_env_logger = { workspace = true }
handy-keys = { workspace = true }
rfd = { workspace = true }
serde = { workspace = true }
toml = { workspace = true }
dirs = { workspace = true }

[workspace.dependencies]
yast-core = { path = "crates/yast-core" }
anyhow = "1.0.100"
iced = { version = "0.14.0", features = ["advanced", "tokio", "image"] }
iced_aw = { version = "0.13.0", features = ["context_menu"] }
livesplit-core = "0.13.0"
log = "0.4.29"
mlua = { version = "0.11.6", features = ["lua54", "vendored", "error-send", "anyhow"] }
pretty_env_logger = "0.5.0"
handy-keys = "0.1.4"
rfd = "0.17.2"
serde = "1.0.228"
toml = "0.9.11"
dirs = "6.0.0"
