[package]
name = "yast"
edition = "2024"
version = "0.1.0"

[workspace]
members = [
  "crates/yast-core", "crates/yasle"
]

[dependencies]
yast-core = { workspace = true }
anyhow = { workspace = true }
iced = { workspace = true }
iced_aw = { workspace = true }
livesplit-core = { workspace = true, features = ["auto-splitting"] }
log = { workspace = true }
mlua = { workspace = true }
fern = { workspace = true }
humantime = { workspace = true }
handy-keys = { workspace = true }
rfd = { workspace = true }
serde = { workspace = true }
dirs = { workspace = true }
include_dir = { workspace = true }

[build-dependencies]
include_dir = { workspace = true }

[workspace.dependencies]
yast-core = { path = "crates/yast-core" }
anyhow = "1.0.100"
iced = { version = "0.14.0", features = ["advanced", "tokio", "image"] }
iced_aw = { version = "0.13.0", features = ["context_menu"] }
livesplit-core = "0.13.0"
log = "0.4.29"
mlua = { version = "0.11.6", features = ["lua54", "vendored", "error-send", "anyhow"] }
fern = { version = "0.7.1", features = ["colored"] }
humantime = "2.3.0"
handy-keys = "0.1.4"
rfd = "0.17.2"
serde = "1.0.228"
ron = "0.12.0"
dirs = "6.0.0"
strum = { version = "0.27.2", features = ["derive"] }
include_dir = "0.7.4"
