[package]
name = "yasle"
edition = "2024"

[dependencies]
yast-core = { workspace = true }
anyhow = { workspace = true }
iced = { workspace = true }
log = { workspace = true }
mlua = { workspace = true }
fern = { workspace = true }
humantime = { workspace = true }
rfd = { workspace = true }
dirs = { workspace = true }
livesplit-core = { workspace = true }
handy-keys = { workspace = true }
strum = { workspace = true }
include_dir = { workspace = true }
