[package]
name = "yast-core"
edition = "2024"

[dependencies]
anyhow = { workspace = true }
iced = { workspace = true }
log = { workspace = true }
mlua = { workspace = true }
serde = { workspace = true }
ron = { workspace = true }
dirs = { workspace = true }
livesplit-core = { workspace = true }
handy-keys = { workspace = true }
strum = { workspace = true }
include_dir = { workspace = true }
