[package]
name = "yast-layout-editor"
version = "0.1.0"
edition = "2024"

[dependencies]
yast-core = { workspace = true }
anyhow = { workspace = true }
iced = { workspace = true }
iced_aw = { workspace = true, features = ["color_picker"] }
log = { workspace = true }
mlua = { workspace = true }
pretty_env_logger = { workspace = true }
rfd = { workspace = true }
dirs = { workspace = true }
livesplit-core = { workspace = true }
